# MyProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
code/test/: CMakeLists.txt  test.c
myfunc/: CMakeLists.txt  print_routines.c  print_routines.h
